--- a/cloudfunction/package.json
+++ b/cloudfunction/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cloudfunction",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,5 +8,9 @@
   },
   "author": "Eric Frazier",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5"
+  }
 }
